# ChangeLog for app-admin/apg
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/apg/ChangeLog,v 1.38 2013/03/17 15:30:15 hwoarang Exp $

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

  07 Dec 2012; Ulrich Müller <ulm@gentoo.org> apg-2.3.0b-r4.ebuild,
  apg-2.3.0b-r5.ebuild:
  Fix LICENSE, 3-clause BSD license according to COPYING file in tarball and
  headers of source files. Bug 444316.

  23 Sep 2012; Anthony G. Basile <blueness@gentoo.org> apg-2.3.0b-r5.ebuild:
  keyword ~ppc64, bug #379651

  27 May 2012; Matt Turner <mattst88@gentoo.org> apg-2.3.0b-r5.ebuild:
  Added ~alpha, bug 379651.

  25 May 2011; Brent Baude <ranger@gentoo.org> apg-2.3.0b-r5.ebuild:
  Marking apg-2.3.0b-r5 ppc for bug 356969

  25 Apr 2011; Raúl Porcel <armin76@gentoo.org> apg-2.3.0b-r4.ebuild,
  apg-2.3.0b-r5.ebuild:
  Drop sparc keywords

  07 Apr 2011; Jeroen Roovers <jer@gentoo.org> apg-2.3.0b-r5.ebuild:
  Stable for HPPA (bug #356969).

  30 Mar 2011; Dane Smith <c1pher@gentoo.org> apg-2.3.0b-r5.ebuild,
  metadata.xml:
  Adopted package. Thanks to Dustin Polke
  (gentoobugsie.20.dsurawicz@spamgourmet.com) for voulenteering to proxy
  maintain this.
  Cleaned up ebuild.

  21 Mar 2011; Christoph Mende <angelos@gentoo.org> apg-2.3.0b-r5.ebuild:
  Stable on amd64 wrt bug #356969

  19 Mar 2011; Thomas Kahle <tomka@gentoo.org> apg-2.3.0b-r5.ebuild:
  x86 stable per bug 356969

  30 Dec 2010; Jeroen Roovers <jer@gentoo.org> apg-2.3.0b-r4.ebuild:
  Stable for SPARC (bug #290799).

*apg-2.3.0b-r5 (30 Dec 2010)

  30 Dec 2010; Jeroen Roovers <jer@gentoo.org> +apg-2.3.0b-r5.ebuild:
  Respect LDFLAGS (bug #335097). Set RDEPEND.

  15 Jan 2010; Jonathan Callen <abcd@gentoo.org> apg-2.3.0b-r4.ebuild:
  Add prefix keywords

  02 Mar 2008; Sven Wegener <swegener@gentoo.org> apg-2.3.0b-r4.ebuild:
  Force own CFLAGS and CC.

*apg-2.3.0b-r4 (09 Mar 2007)
