@@ -7,24 +7,12 @@ AUX apg-glibc-2.4.patch 261 SHA256 2d9e4deff463ba2419fea45d9942309b6d7ae5e3b32ce
 DIST apg-2.3.0b.tar.gz 109995 SHA256 d1e52029709e2d7f9cb99bedce3e02ee7a63cff7b8e2b4c2bc55b3dc03c28b92 SHA512 3112d2267f2311f960a52fa268b55a5faf0250a4a8c5e7444f0c1326afa2844a476a54befcf79e5b8532d74c53f6f58ffc420591c8c36798dd82b43c14869e1a WHIRLPOOL 519b9b9137db3e3009d91ca9ab0b0e782c4840aae7b32b3aed035aebdb9380091b82169c9c6bd37829464792dc686219b70403c88b029b713278e7bea7f105d8
 EBUILD apg-2.3.0b-r4.ebuild 1316 SHA256 3cb336f76c469b9636e9a72a4f5cd7ec558f5f0e6a429109dab25b5c65e925ea SHA512 ee779f4b319547fde382eeac4a0bf096f8042a0e303b1d902223171ac5aa81593d51b1a94c9ff6e130a693a91201a73c1f5ff1beeb0dae3771b4b46babe76775 WHIRLPOOL 666379bb249f8c100df7403d547ec5e95dfc428706eda30b3d474f611f889c3873bc23e91b6ab82e3d925866b1a556eacdc383cc4a3157f21995a99722018c27
 EBUILD apg-2.3.0b-r5.ebuild 1464 SHA256 177174dc43c70a26e85bed6a53639ea321982097346821906cc2f27143d48022 SHA512 e8353e9123c15fe5197ac7e49acab7b832231b010aa1e5238999cae0fe778edecccbb8e6a4c0a1f4b5a65477193c010d920cb3b47f04bddff19265079afe1a90 WHIRLPOOL a23e75ab361ea5e89fa693e5b1da0f5f88c8be8e44b4fc6775a6bdcef36f3865a027cbb8be2ef0e897ec2556390dba84d53f5793e87897477a19c4d9bc2ce7b7
-MISC ChangeLog 5249 SHA256 ab1ee51a2f250f39157e9f6e8fc2f9b8faa8b1a8775eeaeb98835ed86955a605 SHA512 6f302d8aa3eea73c20be39542c36d63d0884658d3c55cf8e70667cde56a733990dc59ccddce4a4e9714e054a4ce34cec0e3769b4f091f5ee7fd0f8e257c8e814 WHIRLPOOL cde8d258255bd6784f6ac17eb8e4cfbad0cfc1063772739405e28434eeb78be1dca612ab7e7f7850cd0b222fb1f507389748a706124ac2d1b3b2106e0f4b2929
-MISC metadata.xml 563 SHA256 815ea70876b68586e9e9e805ac330766708f7c9d089117dea51891a081f77751 SHA512 81b257d147c90e04089c3c69a9749225d189ae7d3d9bc5805942c185fc09b78232d9c0b968e181085bd22b132e88d23e6b003c02922abe33b8ffb888edcc6732 WHIRLPOOL fc7d95ace313cb325e5a925f3201bcf4a4dc102352222409a50e142f5635a4da14aa0ef1b4339815d96972dee264887aaa4f8f544c2d41005c1071757028b570
+MISC ChangeLog 5333 SHA256 f19522e9ef69686cbe3e7df2009cbb3ccb77ca928d1805d46e93bd3f1ca93a50 SHA512 93ef658eda050fa37f4e7a07378001acda753a7e0a0a5f54bd453bfb70df125642e49cf258d606a510f7b6f6a5ec27d5c664a6a83b462ef886abe8961edce207 WHIRLPOOL b35d63eabcefa7bb80a82af79bc4d4763b71b214c7cf1cdd96bdad2c7c2bc84a58656b27204de3043cb6651f44a54d955b8a753a91fce9de76f66b812cb0fcb0
+MISC metadata.xml 477 SHA256 647ddaab557cf7e791d831a8c9edf24fc319737a90b278f5089a9c35be34fa9f SHA512 c03258e98b2a483623287710a7db74665feb11a82297f652e4ef5cdf7647a9639f5e0bccb6fe337dd46d69cc994f776e512085c2d5a6a00e2d9b58a928a99cfe WHIRLPOOL 5986148ffaf9f688c0053a5ce8b93969c1c5d014b038a6249c27638c08176c6774d422a225f9f8c4903ee092d306b01708fcd66821f07b2aadec23b64958780f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRReGIXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88tY8QAIWawk1XSEKTw6j+5/XiOgPt
-yBH/HGJSpg1hDwwrCBaSGBBv42zau+88MpKQOCo2gkoUrp5sfB5cw9kjv7A2qYjj
-4o/+9zCqW3fn0UFyEo5/e57VNVUAkNnjX8fv1XwD8xe0w8rIqbT2md3lDNm/GfO/
-Xxh1pNXGDc1fElS46j04JNzXX2h1MAZjULqFlaOCXTK6zQrLFKjRPxdw6JELpc/n
-V6hJB4HogH4oziGdbbORdFbrfUkBC0Rrh5eWl3LX2BwXNv4Hzy7GjUomSs7RE2lX
-EReYBxoCFpMZZHVzT4ZeElxxams1pFqBtP+ozXL/E0JsX71JsajBn2ommYLF7+W2
-7ilEyaZJUu3lhxunYjFDPxn38Rs7B0e8oWUg0dekLCfuyg0pIUUrVVST1RoVsi7J
-BjZ/8BZwVva33rfoaU7VpfXiBHzBdMHTG7NzlO5DR72saUkZa9gLqfONSsSnpIdz
-ikepmF4ZOFDSjYSfymmpWRacg28Ems9SlGrzhPKgymqco606PXUdWnFF1aS2IQJB
-y1MhX3mVNl0PiOpUSrjh+cm4f5D8xzCoGtG6fcq1mtuM39ZOHD5vwwTOMfWcEv3F
-qbiiwOXuDujuqJEDtr9+fRoZRC0JSXBSyKHUdtRoLb6EZ0qz+ezHiTY4JIktPbjF
-RZ+6/YmBEhSE94cNAF6E
-=wxFI
+iEYEAREIAAYFAlGrI7EACgkQCaWpQKGI+9Ry7gCfZ+8IegWUJrMn+baADj8MvuLQ
+8G4An20Cp+cVw0QBpIsKAtc+ykO8aqTU
+=CVJp
 -----END PGP SIGNATURE-----
