@@ -8,24 +8,12 @@ AUX rsyncd.motd 44 SHA256 38c8ed04808ce0f5c0deba00be8f14412de3b76e34ff5c0f5bf01d
 AUX rsynclogparse-extended.pl 3476 SHA256 9b496670cc75f9fdd99c29fd3ff88627a4d145f2cdfdb3457b9524d66a702418 SHA512 60656deb0e501c51c4a37d2f9cce2829faea830ae42d1f33db52f37b337b71a125b7d350e893fb6098b405e1439cbde160d9e7ecda3ebd8a8f8c34b84acf80b3 WHIRLPOOL 4d3f06b557cf6d3f0bfa4f76e1a00f427dff336319b405b702edf94aace60c4a31a43dd1b217af3dde7fba84b11742a8449beb417ec9b067ae925bbd9bafef25
 EBUILD gentoo-rsync-mirror-1.0-r4.ebuild 2094 SHA256 2a5c34886afc9dd50d946233f6c3dfba844e2062db7702ed3aaf97828a170a47 SHA512 0e9c08be8086c87dd2698a6908e6e573424ac1d68062a6bae4a15e4c7e053723c37009345ac27dc61d5fc8fef67d71611c4cf6f36747be2571bbe7bfaed964e3 WHIRLPOOL 4aba717e78678b2191611be026acc28e334e6d153b0b9ce114346c4f1462d23d0ec8578f5d425012ec698b2a931c1b3a1ac4e659f4713ccd883148aa17e52936
 EBUILD gentoo-rsync-mirror-1.0-r5.ebuild 2104 SHA256 903993ec0dcf939c7430584a0186505440c11242c80094ede10345a0f3ebf2d5 SHA512 463738ed1b7125cde672603a53a193166ca72ffdc85d43d03535d3abc6112e5fa41488ab1c80bf060a14522f3fa764e9576ee4d31d26087e8673c82393e717e9 WHIRLPOOL abc63b62cdec46b2e41545a8b3b2585c82847e3e051bddb641953aecd1d8e10c7b9ff3b6ff0438587a9cc6c4df6895fdc5491975b77577797ea7bb89ffc1fb94
-MISC ChangeLog 4676 SHA256 d1c324d160b8677d813e21fd9f42b0e7fcfc9d5cd778318e5d2f3af636f7d4e3 SHA512 ab00caeddaa6f2edafe35b5cd8471cfd9d074a715040f79bbfe569a13d38b21c7681998f3c5f98e7cd1b9b1626d24aed440968605e635e5b94b83d1e45c5c69a WHIRLPOOL 5d36195c903e4af0a96777201770dcfa7596ee896ccc0dbfbe72a66a80473f89e4aa9cda998bb918a72b9dd7fcdb2797dbab549ea15a72456dac0a407fb4b2f5
-MISC metadata.xml 404 SHA256 a857c816b75fa60553f04d9406441fa26bee4033647f0e7e9d2a4a8f21bc175a SHA512 bb58a5a71b9dec3352e86ca0ed03584b1f3a93e204b8c7cf9389a659de0e49bbb74227af4b5620e937a61b30ec5e1f025d2cb0beaad1466e5047d5ffad9e2e07 WHIRLPOOL a2246c6710cc6277b7f64afcb558142cc0d808da093189719b664bceb319b9f72f79154dc5a5405c4ba959406ab6051aec06228a4ac960acd8a2b004e2ec48fe
+MISC ChangeLog 4760 SHA256 dbe4cd20dfaf19051c09fec9764fa1d613dd45e3aa62bcb7a8d521f68f87ee91 SHA512 bbb970ef40b7e076b82259632eee4fa14cca92484158f20aa8f919d2036defe450d878a9af01cfe78deeff2619e0d4dda76246452ce7409d440942bf230e0560 WHIRLPOOL 6a9b80bd77e0693ca602896cf3045905e72e16faef0603ef369d7d7c7e65c7956f7045a95286066b97c5c45736d39a4af7450fcc596ded82492ff8d439151272
+MISC metadata.xml 318 SHA256 5ee31edac1fd99cea10825278ac69e724278ad1cbaa4b7556986ac1698762e8b SHA512 cb054fd04a03d0791ae900403f3beeb0d2b23c23f21dd3b17bd34f1993207a6f272251dcd8faacda1b7bf8b55a7979c23941a6b256dd6a49d56e486824636d07 WHIRLPOOL be3e2ffe90fa3f64e2d20f80de32e6eef7f23e61089366b7e37d05193aee36be34b4581ef1ba7a549ce952061ceb406617717abe1334f6629fbb994aee1e6e8a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRReENXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88ICEP/A1CVmkuNoe5kgNGPLKdJcbQ
-q0ei4t9W6y0iq3T6twU0CX0eKOUXpXRhYcmv9KBaT+1U2e5ZK8S9PZYlwtjEECRC
-mTZE0mlPTMq4sjeIB4u2aoJG/EfitqLCl6mWV1YqFgG1vzphcl5zorCbZQvteXW5
-PRAAxeswO4hRun1fuXH5wB3sE160R4oc+1aQSubJKNyZWukGU6m5geEBCgynj40a
-51OM2yUv+EbeXS00WO7ftwrDPRLAM+sNnaUsXovUbnjcTm0BFFC05ucYIqW7dU0h
-VFJywhcZUYcQ4M04wgwX37lajFp+lB3OOETrbeo1WsShLFFa6fivgvjCp0dLiWKY
-R6Omekn48U4fhAZ82A17snMaeotvZccIZv6msYRBuHYju2FJa1wm69mvIuFMLBxD
-cBrIyWwotFOyPLotinRpvQdGa7vgGDKtKvqYH2Kz9/DKSlTtYiGoxLxcjGn97XI2
-L4W5OHOT1tJ7/3IDiMxeBFgQI/RoqArdj5Zlqtcay3/Qnzrfi69mQ7o/xKndh+57
-HJdCACM1PxBGRiG8XZmHu3niAiwK2nhDu4e7BEIjinzTFus/hE4okI4zNB1cEdy8
-8gGKSgz7MYl2j6S27D1TM98AaExQN+iorEjjMO1pAiG84FZoBiBJWfK/NN7R9wfh
-YBLs7h6odRfYFwhWBhL5
-=vDvS
+iEYEAREIAAYFAlGrI+0ACgkQCaWpQKGI+9T2MACfQsZhHILrOH7BGnIWZoIEo767
+/VQAoIBAFmqvNzMq6Fk2aInsA8NuQ0cV
+=V5wj
 -----END PGP SIGNATURE-----
